Made AWS an optional dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,10 +213,10 @@ endif()
 
 if (NOT DEFINED BUILD_SHARED_LIBS)
   set (BUILD_SHARED_LIBS ON)
-  find_package(AWSSDK REQUIRED COMPONENTS s3)
+  find_package(AWSSDK COMPONENTS s3)
   unset (BUILD_SHARED_LIBS)
 else ()
-  find_package(AWSSDK REQUIRED COMPONENTS s3)
+  find_package(AWSSDK COMPONENTS s3)
 endif ()
 message(STATUS "Trying to find AWS SDK for AWS S3 IO handler support")
 if(${AWSSDK_FOUND})
