Add zlib format

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -82,6 +82,7 @@ set(XTENSOR_IO_TESTS
     test_xaudio.cpp
     test_xio_blosc.cpp
     test_xio_gzip.cpp
+    test_xio_zlib.cpp
     test_xio_binary.cpp
     test_xio_gcs_handler.cpp
     test_xio_aws_handler.cpp
