Find ghc::filesystem's include directory
2>------ Build started: Project: xtensor-zarr-gdal, Configuration: RelWithDebInfo x64 ------
2>xtensor-zarr-gdal.cpp
2>C:\Libs\xtensor-io\include\xtensor-io/xchunk_store_manager.hpp(7,10): fatal error C1083: Cannot open include file: 'ghc/filesystem.hpp': No such file or directory
2>Done building project "xtensor-zarr-gdal.vcxproj" -- FAILED.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,6 +124,16 @@ add_library(xtensor-io INTERFACE)
 
 include_directories(${GTEST_INCLUDE_DIRS})
 
+find_path(ghc-filesystem-include REQUIRED
+    NAMES "ghc/filesystem.hpp"
+    DOC "Path to include directory of https://github.com/gulrak/filesystem"
+    )
+target_include_directories(xtensor-io
+    INTERFACE
+    $<BUILD_INTERFACE:${ghc-filesystem-include}>
+    $<INSTALL_INTERFACE:include>
+)
+
 target_include_directories(xtensor-io
     INTERFACE
     $<BUILD_INTERFACE:${XTENSOR_IO_INCLUDE_DIR}>
