--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,5 +3,5 @@ trigger:
 
 jobs:
   #  - template: ./.azure-pipelines/azure-pipelines-linux.yml
-  - template: ./.azure-pipelines/azure-pipelines-osx.yml
+  #- template: ./.azure-pipelines/azure-pipelines-osx.yml
 
